SonarValidator_Prober/parser/generated/IpAddrParser.cpp

// Generated from /home/osboxes/IdeaProjects/SonarValidator/SonarValidator_Prober/parser/grammar/IpAddr.g4 by ANTLR 4.13.1


#include "IpAddrVisitor.h"

#include "IpAddrParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct IpAddrParserStaticData final {
  IpAddrParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  IpAddrParserStaticData(const IpAddrParserStaticData&) = delete;
  IpAddrParserStaticData(IpAddrParserStaticData&&) = delete;
  IpAddrParserStaticData& operator=(const IpAddrParserStaticData&) = delete;
  IpAddrParserStaticData& operator=(IpAddrParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ipaddrParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
IpAddrParserStaticData *ipaddrParserStaticData = nullptr;

void ipaddrParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ipaddrParserStaticData != nullptr) {
    return;
  }
#else
  assert(ipaddrParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<IpAddrParserStaticData>(
    std::vector<std::string>{
      "document", "briefDocument", "routeDocument", "arpDocument", "arpEntry", 
      "arpAddress", "item", "ifaceHeader", "ifaceAttr", "attrLead", "briefEntry", 
      "linkState", "briefAddr", "routeEntry", "routeHead", "ifname", "genericLine", 
      "blank", "elem"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "'default'", "", "'inet'", "'inet6'", "", 
      "'UP'", "'DOWN'", "'UNKNOWN'", "", "':'", "'/'"
    },
    std::vector<std::string>{
      "", "NEWLINE", "WS", "INDEX", "MAC", "ADDR", "DEFAULT", "LINK", "INET", 
      "INET6", "LIFETIME", "UP", "DOWN", "UNKNOWN", "IFNAME", "COLON", "SLASH", 
      "WORD"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ipaddrParserStaticData = staticData.release();
}

}

IpAddrParser::IpAddrParser(TokenStream *input) : IpAddrParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

IpAddrParser::IpAddrParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  IpAddrParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ipaddrParserStaticData->atn, ipaddrParserStaticData->decisionToDFA, ipaddrParserStaticData->sharedContextCache, options);
}

IpAddrParser::~IpAddrParser() {
  delete _interpreter;
}

const atn::ATN& IpAddrParser::getATN() const {
  return *ipaddrParserStaticData->atn;
}

std::string IpAddrParser::getGrammarFileName() const {
  return "IpAddr.g4";
}

const std::vector<std::string>& IpAddrParser::getRuleNames() const {
  return ipaddrParserStaticData->ruleNames;
}

const dfa::Vocabulary& IpAddrParser::getVocabulary() const {
  return ipaddrParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView IpAddrParser::getSerializedATN() const {
  return ipaddrParserStaticData->serializedATN;
}


//----------------- DocumentContext ------------------------------------------------------------------

IpAddrParser::DocumentContext::DocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::DocumentContext::EOF() {
  return getToken(IpAddrParser::EOF, 0);
}

std::vector<IpAddrParser::ItemContext *> IpAddrParser::DocumentContext::item() {
  return getRuleContexts<IpAddrParser::ItemContext>();
}

IpAddrParser::ItemContext* IpAddrParser::DocumentContext::item(size_t i) {
  return getRuleContext<IpAddrParser::ItemContext>(i);
}


size_t IpAddrParser::DocumentContext::getRuleIndex() const {
  return IpAddrParser::RuleDocument;
}


std::any IpAddrParser::DocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitDocument(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::DocumentContext* IpAddrParser::document() {
  DocumentContext *_localctx = _tracker.createInstance<DocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, IpAddrParser::RuleDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262142) != 0)) {
      setState(38);
      item();
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(44);
    match(IpAddrParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BriefDocumentContext ------------------------------------------------------------------

IpAddrParser::BriefDocumentContext::BriefDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::BriefDocumentContext::EOF() {
  return getToken(IpAddrParser::EOF, 0);
}

std::vector<IpAddrParser::ItemContext *> IpAddrParser::BriefDocumentContext::item() {
  return getRuleContexts<IpAddrParser::ItemContext>();
}

IpAddrParser::ItemContext* IpAddrParser::BriefDocumentContext::item(size_t i) {
  return getRuleContext<IpAddrParser::ItemContext>(i);
}


size_t IpAddrParser::BriefDocumentContext::getRuleIndex() const {
  return IpAddrParser::RuleBriefDocument;
}


std::any IpAddrParser::BriefDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitBriefDocument(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::BriefDocumentContext* IpAddrParser::briefDocument() {
  BriefDocumentContext *_localctx = _tracker.createInstance<BriefDocumentContext>(_ctx, getState());
  enterRule(_localctx, 2, IpAddrParser::RuleBriefDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262142) != 0)) {
      setState(46);
      item();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(IpAddrParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RouteDocumentContext ------------------------------------------------------------------

IpAddrParser::RouteDocumentContext::RouteDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::RouteDocumentContext::EOF() {
  return getToken(IpAddrParser::EOF, 0);
}

std::vector<IpAddrParser::ItemContext *> IpAddrParser::RouteDocumentContext::item() {
  return getRuleContexts<IpAddrParser::ItemContext>();
}

IpAddrParser::ItemContext* IpAddrParser::RouteDocumentContext::item(size_t i) {
  return getRuleContext<IpAddrParser::ItemContext>(i);
}


size_t IpAddrParser::RouteDocumentContext::getRuleIndex() const {
  return IpAddrParser::RuleRouteDocument;
}


std::any IpAddrParser::RouteDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitRouteDocument(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::RouteDocumentContext* IpAddrParser::routeDocument() {
  RouteDocumentContext *_localctx = _tracker.createInstance<RouteDocumentContext>(_ctx, getState());
  enterRule(_localctx, 4, IpAddrParser::RuleRouteDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262142) != 0)) {
      setState(54);
      item();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(60);
    match(IpAddrParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArpDocumentContext ------------------------------------------------------------------

IpAddrParser::ArpDocumentContext::ArpDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::ArpDocumentContext::EOF() {
  return getToken(IpAddrParser::EOF, 0);
}

std::vector<IpAddrParser::ArpEntryContext *> IpAddrParser::ArpDocumentContext::arpEntry() {
  return getRuleContexts<IpAddrParser::ArpEntryContext>();
}

IpAddrParser::ArpEntryContext* IpAddrParser::ArpDocumentContext::arpEntry(size_t i) {
  return getRuleContext<IpAddrParser::ArpEntryContext>(i);
}

std::vector<IpAddrParser::GenericLineContext *> IpAddrParser::ArpDocumentContext::genericLine() {
  return getRuleContexts<IpAddrParser::GenericLineContext>();
}

IpAddrParser::GenericLineContext* IpAddrParser::ArpDocumentContext::genericLine(size_t i) {
  return getRuleContext<IpAddrParser::GenericLineContext>(i);
}

std::vector<IpAddrParser::BlankContext *> IpAddrParser::ArpDocumentContext::blank() {
  return getRuleContexts<IpAddrParser::BlankContext>();
}

IpAddrParser::BlankContext* IpAddrParser::ArpDocumentContext::blank(size_t i) {
  return getRuleContext<IpAddrParser::BlankContext>(i);
}


size_t IpAddrParser::ArpDocumentContext::getRuleIndex() const {
  return IpAddrParser::RuleArpDocument;
}


std::any IpAddrParser::ArpDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitArpDocument(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::ArpDocumentContext* IpAddrParser::arpDocument() {
  ArpDocumentContext *_localctx = _tracker.createInstance<ArpDocumentContext>(_ctx, getState());
  enterRule(_localctx, 6, IpAddrParser::RuleArpDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262142) != 0)) {
      setState(65);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
      case 1: {
        setState(62);
        arpEntry();
        break;
      }

      case 2: {
        setState(63);
        genericLine();
        break;
      }

      case 3: {
        setState(64);
        blank();
        break;
      }

      default:
        break;
      }
      setState(69);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(70);
    match(IpAddrParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArpEntryContext ------------------------------------------------------------------

IpAddrParser::ArpEntryContext::ArpEntryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IpAddrParser::ArpAddressContext* IpAddrParser::ArpEntryContext::arpAddress() {
  return getRuleContext<IpAddrParser::ArpAddressContext>(0);
}

tree::TerminalNode* IpAddrParser::ArpEntryContext::NEWLINE() {
  return getToken(IpAddrParser::NEWLINE, 0);
}

std::vector<IpAddrParser::ElemContext *> IpAddrParser::ArpEntryContext::elem() {
  return getRuleContexts<IpAddrParser::ElemContext>();
}

IpAddrParser::ElemContext* IpAddrParser::ArpEntryContext::elem(size_t i) {
  return getRuleContext<IpAddrParser::ElemContext>(i);
}


size_t IpAddrParser::ArpEntryContext::getRuleIndex() const {
  return IpAddrParser::RuleArpEntry;
}


std::any IpAddrParser::ArpEntryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitArpEntry(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::ArpEntryContext* IpAddrParser::arpEntry() {
  ArpEntryContext *_localctx = _tracker.createInstance<ArpEntryContext>(_ctx, getState());
  enterRule(_localctx, 8, IpAddrParser::RuleArpEntry);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    arpAddress();
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262140) != 0)) {
      setState(73);
      elem();
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    match(IpAddrParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArpAddressContext ------------------------------------------------------------------

IpAddrParser::ArpAddressContext::ArpAddressContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::ArpAddressContext::ADDR() {
  return getToken(IpAddrParser::ADDR, 0);
}

tree::TerminalNode* IpAddrParser::ArpAddressContext::IFNAME() {
  return getToken(IpAddrParser::IFNAME, 0);
}


size_t IpAddrParser::ArpAddressContext::getRuleIndex() const {
  return IpAddrParser::RuleArpAddress;
}


std::any IpAddrParser::ArpAddressContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitArpAddress(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::ArpAddressContext* IpAddrParser::arpAddress() {
  ArpAddressContext *_localctx = _tracker.createInstance<ArpAddressContext>(_ctx, getState());
  enterRule(_localctx, 10, IpAddrParser::RuleArpAddress);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _la = _input->LA(1);
    if (!(_la == IpAddrParser::ADDR

    || _la == IpAddrParser::IFNAME)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ItemContext ------------------------------------------------------------------

IpAddrParser::ItemContext::ItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IpAddrParser::IfaceHeaderContext* IpAddrParser::ItemContext::ifaceHeader() {
  return getRuleContext<IpAddrParser::IfaceHeaderContext>(0);
}

IpAddrParser::IfaceAttrContext* IpAddrParser::ItemContext::ifaceAttr() {
  return getRuleContext<IpAddrParser::IfaceAttrContext>(0);
}

IpAddrParser::BriefEntryContext* IpAddrParser::ItemContext::briefEntry() {
  return getRuleContext<IpAddrParser::BriefEntryContext>(0);
}

IpAddrParser::RouteEntryContext* IpAddrParser::ItemContext::routeEntry() {
  return getRuleContext<IpAddrParser::RouteEntryContext>(0);
}

IpAddrParser::GenericLineContext* IpAddrParser::ItemContext::genericLine() {
  return getRuleContext<IpAddrParser::GenericLineContext>(0);
}

IpAddrParser::BlankContext* IpAddrParser::ItemContext::blank() {
  return getRuleContext<IpAddrParser::BlankContext>(0);
}


size_t IpAddrParser::ItemContext::getRuleIndex() const {
  return IpAddrParser::RuleItem;
}


std::any IpAddrParser::ItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitItem(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::ItemContext* IpAddrParser::item() {
  ItemContext *_localctx = _tracker.createInstance<ItemContext>(_ctx, getState());
  enterRule(_localctx, 12, IpAddrParser::RuleItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(83);
      ifaceHeader();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(84);
      ifaceAttr();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(85);
      briefEntry();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(86);
      routeEntry();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(87);
      genericLine();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(88);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfaceHeaderContext ------------------------------------------------------------------

IpAddrParser::IfaceHeaderContext::IfaceHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::IfaceHeaderContext::INDEX() {
  return getToken(IpAddrParser::INDEX, 0);
}

std::vector<tree::TerminalNode *> IpAddrParser::IfaceHeaderContext::COLON() {
  return getTokens(IpAddrParser::COLON);
}

tree::TerminalNode* IpAddrParser::IfaceHeaderContext::COLON(size_t i) {
  return getToken(IpAddrParser::COLON, i);
}

IpAddrParser::IfnameContext* IpAddrParser::IfaceHeaderContext::ifname() {
  return getRuleContext<IpAddrParser::IfnameContext>(0);
}

tree::TerminalNode* IpAddrParser::IfaceHeaderContext::NEWLINE() {
  return getToken(IpAddrParser::NEWLINE, 0);
}

std::vector<IpAddrParser::ElemContext *> IpAddrParser::IfaceHeaderContext::elem() {
  return getRuleContexts<IpAddrParser::ElemContext>();
}

IpAddrParser::ElemContext* IpAddrParser::IfaceHeaderContext::elem(size_t i) {
  return getRuleContext<IpAddrParser::ElemContext>(i);
}


size_t IpAddrParser::IfaceHeaderContext::getRuleIndex() const {
  return IpAddrParser::RuleIfaceHeader;
}


std::any IpAddrParser::IfaceHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitIfaceHeader(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::IfaceHeaderContext* IpAddrParser::ifaceHeader() {
  IfaceHeaderContext *_localctx = _tracker.createInstance<IfaceHeaderContext>(_ctx, getState());
  enterRule(_localctx, 14, IpAddrParser::RuleIfaceHeader);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(IpAddrParser::INDEX);
    setState(92);
    match(IpAddrParser::COLON);
    setState(93);
    ifname();
    setState(94);
    match(IpAddrParser::COLON);
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262140) != 0)) {
      setState(95);
      elem();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(101);
    match(IpAddrParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfaceAttrContext ------------------------------------------------------------------

IpAddrParser::IfaceAttrContext::IfaceAttrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IpAddrParser::AttrLeadContext* IpAddrParser::IfaceAttrContext::attrLead() {
  return getRuleContext<IpAddrParser::AttrLeadContext>(0);
}

tree::TerminalNode* IpAddrParser::IfaceAttrContext::NEWLINE() {
  return getToken(IpAddrParser::NEWLINE, 0);
}

std::vector<IpAddrParser::ElemContext *> IpAddrParser::IfaceAttrContext::elem() {
  return getRuleContexts<IpAddrParser::ElemContext>();
}

IpAddrParser::ElemContext* IpAddrParser::IfaceAttrContext::elem(size_t i) {
  return getRuleContext<IpAddrParser::ElemContext>(i);
}


size_t IpAddrParser::IfaceAttrContext::getRuleIndex() const {
  return IpAddrParser::RuleIfaceAttr;
}


std::any IpAddrParser::IfaceAttrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitIfaceAttr(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::IfaceAttrContext* IpAddrParser::ifaceAttr() {
  IfaceAttrContext *_localctx = _tracker.createInstance<IfaceAttrContext>(_ctx, getState());
  enterRule(_localctx, 16, IpAddrParser::RuleIfaceAttr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    attrLead();
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 262140) != 0)) {
      setState(104);
      elem();
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    match(IpAddrParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttrLeadContext ------------------------------------------------------------------

IpAddrParser::AttrLeadContext::AttrLeadContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IpAddrParser::AttrLeadContext::LINK() {
  return getToken(IpAddrParser::LINK, 0);
}

tree::TerminalNode* IpAddrParser::AttrLeadContext::INET() {
  return getToken(IpAddrParser::INET, 0);
}

tree::TerminalNode* IpAddrParser::AttrLeadContext::INET6() {
  return getToken(IpAddrParser::INET6, 0);
}

tree::TerminalNode* IpAddrParser::AttrLeadContext::LIFETIME() {
  return getToken(IpAddrParser::LIFETIME, 0);
}


size_t IpAddrParser::AttrLeadContext::getRuleIndex() const {
  return IpAddrParser::RuleAttrLead;
}


std::any IpAddrParser::AttrLeadContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IpAddrVisitor*>(visitor))
    return parserVisitor->visitAttrLead(this);
  else
    return visitor->visitChildren(this);
}

IpAddrParser::AttrLeadContext* IpAddrParser::attrLead() {
  AttrLeadContext *_localctx = _tracker.createInstance<AttrLeadContext>(_ctx, getState());
  enterRule(_localctx, 18, IpAddrParser::RuleAttrLead);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1920) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BriefEntryContext ------------------------------------------------------------------
